fix drag display issues + double border in table

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -44,7 +44,7 @@
   }
 
   .panel.custom-accordion .panel-body {
-
+    background: #CCC;
   }
 
   .panel {
@@ -53,12 +53,19 @@
     box-shadow: 0 0 0;
   }
 
+
   .table-row{
     display: flex;
     min-height: 35px;
-    border: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+
+    &:last-child {
+      border-bottom: 1px solid black;
+    }
 
     &.table-heading {
+      background: #EEE;
       font-weight: bold;
     }
 
@@ -67,5 +74,13 @@
       border-right: 1px solid black;
       padding: 5px;
     }
+  }
+}
+
+.gu-mirror {
+  border: 1px solid black;
+  div {
+    padding: 0;
+    display: inline-block;
   }
 }
